- Fixed: Customize draft editor default message - Fixed: "Component Installer Command" field visibility across various forms - Fixed: Elevated AppBar implement on pin form - Fixed: Update favicon of title bar of application - Fixed: Login icon visibility issue - Fixed: "Create New Board" form open behavior issue

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1351,15 +1351,6 @@ input:-webkit-autofill:focus {
     transition: border .24s ease-in-out
   }
 
-.MuiChip-avatar {
-    color: #3f51b5 !important;
-}
-
-.MuiAvatar-colorDefault {
-    background: #fff !important;
-    border: solid 1px #3f51b5 !important;
-}
-
 .renderChip {
     font-size: 16px !important;
     padding: 10px !important;
